--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -5,5 +5,12 @@
 body {
   width: 100vw;
   height: 100vh;
-  background-color: #1A202C;
+  
+
+}
+
+.bg-custom {
+  background-image: url('../../public/fundo_tela_site.jpg');
+  background-size: 100vw 100vh;
+  background-repeat: no-repeat ;
 }
